--- a/index.html
+++ b/index.html
@@ -15,34 +15,52 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Discover Dublin</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item ">
-                    <a class="nav-link" href="#">City Center Attractions <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">The Great Outdoors</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Restaurants</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Iconic Pubs</a>
-                </li>
-            </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Discover Dublin</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto mt-md-0" id="Menu">
+          <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+            <a class="nav-link" href="#">City Center Attractions</a>
+          </li>
+          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+            <a class="nav-link" href="#">The Great Outdoors</a>
+          </li>
+          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+            <a class="nav-link" href="#">Restaurants</a>
+          </li>
+          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
+            <a class="nav-link" href="#">Iconic Pubs</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <!-- hero-image -->
     <header>
         <div class="hero-image"></div>
     </header>
+    <!-- About section -->
+   <div class="container">
+       <div class="row">
+           <div class="col-sm-12">
+               <h2 class="heading">About Dublin</h2>
+               <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. </p>
+               <p>Discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
+                   Many attractions around the city offer self-guided tours and guided programmes for visitors to learn about the rich history and legends of the site. 
+                   Many also host annual events, festivals, and other activities each season for a richer cultural experience.
+                </p>
+           </div>
+       </div>
+   </div>
 
 </body>
-
+ <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
