added font-awesome icon for about dublin section and added font-awesome link

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Discover Dublin</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 
 <body>
@@ -49,8 +47,8 @@
    <div class="container">
        <div class="row">
            <div class="col-sm-12">
-               <h2 class="heading">About Dublin</h2>
-               <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. </p>
+               <h2 class="heading"><i class="fas fa-info-circle"></i>About Dublin</h2>
+               <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the Docklands home and new hotels, pubs and restaurants sprouting throughout the city. Despite all the busynesss, Dublin retains its village-like charms, with historic neighborhoods reminders of gentler, slower-moving times. Whether you like your city breaks with a modern sheen or with an other-era luster, Dublin has something for you.  You’ll never run out of things to do and see in Dublin City – there’s just so much happening all year round. </p>
                <p>Discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
                    Many attractions around the city offer self-guided tours and guided programmes for visitors to learn about the rich history and legends of the site. 
                    Many also host annual events, festivals, and other activities each season for a richer cultural experience.
