--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    <div class="container">
        <div class="row">
            <div class="col-sm-12">
-               <h2 class="heading"><i class="fas fa-info-circle"></i>About Dublin</h2>
+               <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About Dublin</h2></span>
                <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the Docklands home and new hotels, pubs and restaurants sprouting throughout the city. Despite all the busynesss, Dublin retains its village-like charms, with historic neighborhoods reminders of gentler, slower-moving times. Whether you like your city breaks with a modern sheen or with an other-era luster, Dublin has something for you.  You’ll never run out of things to do and see in Dublin City – there’s just so much happening all year round. </p>
                <p>Discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
                    Many attractions around the city offer self-guided tours and guided programmes for visitors to learn about the rich history and legends of the site. 
