--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto mt-md-0" id="Menu">
-          <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse">
+          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
@@ -44,15 +44,33 @@
         <div id="hero-image"></div>
     </header>
     <!-- About section -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About Dublin</span></h2>
+                    <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the Docklands home and new hotels, pubs and restaurants sprouting throughout the city. Despite all the busynesss, Dublin retains its village-like charms, with historic neighborhoods reminders of gentler, slower-moving times. Whether you like your city breaks with a modern sheen or with an other-era luster, Dublin has something for you.  You’ll never run out of things to do and see in Dublin City – there’s just so much happening all year round. </p>
+                    <p>Discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
+                        Many attractions around the city offer self-guided tours and guided programmes for visitors to learn about the rich history and legends of the site. 
+                        Many also host annual events, festivals, and other activities each season for a richer cultural experience.
+                        </p>
+                </div>
+            </div>
+        </div>
+    </section>
+   <!-- Maps -->
    <div class="container">
-       <div class="row">
-           <div class="col-sm-12">
-               <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About Dublin</h2></span>
-               <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the Docklands home and new hotels, pubs and restaurants sprouting throughout the city. Despite all the busynesss, Dublin retains its village-like charms, with historic neighborhoods reminders of gentler, slower-moving times. Whether you like your city breaks with a modern sheen or with an other-era luster, Dublin has something for you.  You’ll never run out of things to do and see in Dublin City – there’s just so much happening all year round. </p>
-               <p>Discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
-                   Many attractions around the city offer self-guided tours and guided programmes for visitors to learn about the rich history and legends of the site. 
-                   Many also host annual events, festivals, and other activities each season for a richer cultural experience.
-                </p>
+       <div class="row mt-4 mb-4">
+           <div class="col-sm-6">
+                <button type="button" class="btn btn-primary btn-lg btn-block">City Center Attractions</button>
+           </div>
+           <div class="col-sm-6">
+                <button type="button" class="btn btn-primary btn-lg btn-block">The Great Outdoors</button>
+           </div>
+           <div class="row">
+                <div class="col-sm-12">
+
+                </div>
            </div>
        </div>
    </div>
