added in div for map id and style basic box structure of map id

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
    <div class="container">
        <div class="row mt-4 mb-4">
            <div class="col-sm-6">
-                <button type="button" class="btn btn-primary btn-lg btn-block">City Center Attractions</button>
+                <button type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
            </div>
            <div class="col-sm-6">
-                <button type="button" class="btn btn-primary btn-lg btn-block">The Great Outdoors</button>
+                <button type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
            </div>
            <div class="row">
                 <div class="col-sm-12">
-
+                     <div id="map"></div>
                 </div>
            </div>
        </div>
@@ -79,4 +79,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="assets/js/maps.js"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap"></script>
 </html>
