--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
             <a class="nav-link" href="#">The Great Outdoors</a>
           </li>
           <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-            <a class="nav-link" href="#">Restaurants</a>
-          </li>
-          <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-            <a class="nav-link" href="#">Iconic Pubs</a>
+            <a class="nav-link" href="#">Restaurants | Iconic Pubs</a>
           </li>
         </ul>
       </div>
@@ -67,12 +64,8 @@
            <div class="col-sm-6">
                 <button type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
            </div>
-           <div class="row">
-                <div class="col-sm-12">
-                     <div id="map"></div>
-                </div>
-           </div>
        </div>
+       <div id="map"></div>
    </div>
 
 </body>
@@ -80,6 +73,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="assets/js/maps.js"></script>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap" type="text/javascript"></script>
 </html>
