added button id for js.maps click events

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
    <div class="container">
        <div class="row mt-4 mb-4">
            <div class="col-sm-6">
-                <button type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
+                <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
            </div>
            <div class="col-sm-6">
-                <button type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
+                <button id="outdoors" type="button" class="btn btn-danger btn-lg btn-block">The Great Outdoors</button>
            </div>
        </div>
        <div id="map"></div>
