--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-sm-12">
                     <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About Dublin</span></h2>
                     <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the Docklands home and new hotels, pubs and restaurants sprouting throughout the city. Despite all the busynesss, Dublin retains its village-like charms, with historic neighborhoods reminders of gentler, slower-moving times. Whether you like your city breaks with a modern sheen or with an other-era luster, Dublin has something for you.  You’ll never run out of things to do and see in Dublin City – there’s just so much happening all year round. </p>
-                    <p>Discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
+                    <p>Upon your visit, we implore you to discover Dublin culture, from the famous Guinness Storehouse to St. Patrick's Cathedral, you can take a walk back in time to learn about Irish heritage and events that have shaped Dublin's history. 
                         Many attractions around the city offer self-guided tours and guided programmes for visitors to learn about the rich history and legends of the site. 
                         Many also host annual events, festivals, and other activities each season for a richer cultural experience.
                         </p>
@@ -66,18 +66,20 @@
    </div>
    <!--Contact form-->
    <section>
-        <div class="container">
+        <div class="">
             <div class="contact">
-                <h1>Contact Us!</h1>
+                <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
                 <p>Let us know if you have any questions about Dublin!</p>
             </div>
         </div>
-        <form>      
-            <input name="name" type="text" class="form-input" placeholder="Name" />   
-            <input name="email" type="text" class="form-input" placeholder="Email" />
-            <textarea name="text" class="form-input" placeholder="Comment"></textarea>
-            <input type="submit" value="SUBMIT"/>
-        </form>
+        <div class="form-container">
+            <form>      
+                <input name="name" type="text" class="form-input" placeholder="Name" />   
+                <input name="email" type="text" class="form-input" placeholder="Email" />
+                <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
+                <input id= "contact-button" type="submit" value="Submit"/>
+            </form>
+        </div>
    </section>
 </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
