--- a/attractions.html
+++ b/attractions.html
@@ -13,7 +13,7 @@
 <body>
       <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
-      <a class="navbar-brand" href="#">Discover Dublin</a>
+      <a class="navbar-brand" href="index.html">Discover Dublin</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,8 +36,8 @@
      <section>
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
-                    <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>City Center Attractions</span></h2>
+                <div class="col-sm-12 margin-top">
+                    <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>City Center Attractions</span></h2>
                 </div>
             </div>
         </div>
