--- a/outdoor.html
+++ b/outdoor.html
@@ -27,7 +27,7 @@
 <body>
       <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
-      <a class="navbar-brand" href="#">Discover Dublin</a>
+      <a class="navbar-brand" href="index.html">Discover Dublin</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
