--- a/attractions.html
+++ b/attractions.html
@@ -50,6 +50,33 @@
                     <p>Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h2 class="center-content">Glasnevin Cemetary</h2>
+                    <p>Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin Cemetery which opened in 1832. It holds the graves and memorials of several notable figures who have helped shaped Irish history and culture, including  Michael Collins, Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland most traditional pubs Gravediggers, located at the rear of the cemetery.</p>
+                </div>
+                  <div class="col-sm-6">
+                    <img src="assets/images/botanic-glasnevin.jpg" alt="Glasnevin Cemetary" width="100%">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <img src="assets/images/castle-dublin.jpg" alt="Dublin Castle" width="100%">
+                </div>
+                <div class="col-sm-6">
+                    <h2 class="center-content">Dublin Castle</h2>
+                    <p>Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle served for centuries as the headquarters of English, and later British, administration in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to the new Irish government. It is now a major government complex and a key tourist attraction.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h2 class="center-content">Temple Bar</h2>
+                    <p>Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland. The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland Street to the east and Fishamble Street to the west. It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist destination. </p>
+                </div>
+                  <div class="col-sm-6">
+                    <img src="assets/images/trinity.jpg" alt="Temple Bar" width="100%">
+                </div>
+            </div>
         </div>
     </section>
 </body>
