made a new file called slider.js and added it to attactions.html in scripts at bottom of the page

--- a/attractions.html
+++ b/attractions.html
@@ -49,54 +49,41 @@
             <div>
                 <div>
                     <h1>Trinity College Dublin</h1>
-                    <p>
-                        Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.
-                    </p>
+                    <p>Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.</p>
                 </div>
             </div>
             <div>
                 <div>
                     <h1>Glasnevin Cemetary</h1>
-                    <p>
-                      Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin Cemetery which opened in 1832. It holds the graves and memorials of several notable figures who have helped shaped Irish history and culture, including  Michael Collins, Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland most traditional pubs Gravediggers, located at the rear of the cemetery. 
-                    </p>
+                    <p>Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin Cemetery which opened in 1832. It holds the graves and memorials of several notable figures who have helped shaped Irish history and culture, including  Michael Collins, Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland most traditional pubs Gravediggers, located at the rear of the cemetery. </p>
                 </div>
             </div>
             <div>
                 <div>
                     <h1>Temple Bar</h1>
-                    <p>
-                        Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland. The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland Street to the east and Fishamble Street to the west. It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist destination. 
-                    </p>
+                    <p>Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland. The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland Street to the east and Fishamble Street to the west. It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist destination. </p>
                 </div>
             </div>
             <div>
                 <div>
                     <h1>Dublin Castle</h1>
-                    <p>
-                        Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle served for centuries as the headquarters of English, and later British, administration in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to the new Irish government. It is now a major government complex and a key tourist attraction.
-                    </p>
+                    <p>Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle served for centuries as the headquarters of English, and later British, administration in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to the new Irish government. It is now a major government complex and a key tourist attraction. </p>
                 </div>
             </div>
             <div>
                 <div>
                     <h1>Guinness Storehouse</h1>
-                    <p>
-                        Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin, Ireland. Since opening in 2000, it has received over twenty million visitors. The Storehouse covers seven floors surrounding a glass atrium shaped in the form of a pint of Guinness.
-                    </p>
+                    <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin, Ireland. Since opening in 2000, it has received over twenty million visitors. The Storehouse covers seven floors surrounding a glass atrium shaped in the form of a pint of Guinness.</p>
                 </div>
             </div>
         </div>
+        <div class="buttons">
+            <button id="prev"></button>
+            <button id="next"></button>
+        </div>
     </section>
 </body>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 </html>
