changed all slider opacity to 0 and slider current to opacity 1 so only the current slide is visible on the page for the user

--- a/attractions.html
+++ b/attractions.html
@@ -44,41 +44,41 @@
                 </div>
             </div>
         </div>
-        <div>
-            <div>
-                <div>
+        <div class="slide-container">
+            <div class="slider current">
+                <div class="slide-content">
                     <h1>Trinity College Dublin</h1>
                     <p>Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.</p>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="slider">
+                <div class="slide-content">
                     <h1>Glasnevin Cemetary</h1>
                     <p>Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin Cemetery which opened in 1832. It holds the graves and memorials of several notable figures who have helped shaped Irish history and culture, including  Michael Collins, Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland most traditional pubs Gravediggers, located at the rear of the cemetery. </p>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="slider">
+                <div class="slide-content">
                     <h1>Temple Bar</h1>
                     <p>Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland. The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland Street to the east and Fishamble Street to the west. It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist destination. </p>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="slider">
+                <div class="slide-content">
                     <h1>Dublin Castle</h1>
                     <p>Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle served for centuries as the headquarters of English, and later British, administration in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to the new Irish government. It is now a major government complex and a key tourist attraction. </p>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="slider">
+                <div class="slide-content">
                     <h1>Guinness Storehouse</h1>
                     <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin, Ireland. Since opening in 2000, it has received over twenty million visitors. The Storehouse covers seven floors surrounding a glass atrium shaped in the form of a pint of Guinness.</p>
                 </div>
             </div>
         </div>
         <div class="buttons">
-            <button id="prev"></button>
-            <button id="next"></button>
+            <button id="prev"><i class="fas fa-arrow-left"></i></button>
+            <button id="next"><i class="fas fa-arrow-right"></i></button>
         </div>
     </section>
 </body>
