added carousel content to each image

--- a/index.html
+++ b/index.html
@@ -102,24 +102,38 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="assets/images/trinity.jpg" alt="trinity college">
-                        <div class="carousel-caption d-none d-md-block text-white">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
                             <h5>Trinity College Dublin</h5>
                             <p>Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/botanic-glasnevin.jpg" alt="glasnevin cemetary">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Glasnevin Cemetary</h5>
+                            <p>Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin Cemetery which opened in 1832. It holds the graves and memorials of several notable figures who have helped shaped Irish history and culture, including  Michael Collins, Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland most traditional pubs Gravediggers, located at the rear of the cemetery. .</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/temple-bar.jpg" alt="Temple Bar">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Temple Bar</h5>
+                            <p>Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland. The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland Street to the east and Fishamble Street to the west. It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist destination. </p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/castle-dublin.jpg"
-                            alt="Dublin Castle">
+                        <img class="d-block w-100" src="assets/images/castle-dublin.jpg" alt="Dublin Castle">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Dublin Castle</h5>
+                            <p>Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle served for centuries as the headquarters of English, and later British, administration in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to the new Irish government. It is now a major government complex and a key tourist attraction.</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/brewery.jpg"
-                            alt="Guinness Storehouse">
+                        <img class="d-block w-100" src="assets/images/brewery.jpg" alt="Guinness Storehouse">
+                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                            <h5>Guinness Storehouse</h5>
+                            <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin, Ireland. Since opening in 2000, it has received over twenty million visitors</p>
+                        </div>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
