--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         Attractions</button>
                 </div>
                 <div id="outdoor" class="col-sm-6">
-                    <button id="outdoors" type="button" class="btn btn-danger btn-lg btn-block">The Great
+                    <button id="outdoors" type="button" class="btn btn-primary btn-lg btn-block">The Great
                         Outdoors</button>
                 </div>
             </div>
