made submit button on contact form smaller and fixed nav id's so they're now all clickable

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse mr-auto" id="navbarNav">
             <ul class="navbar-nav mt-md-0" id="Menu">
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-                    <a class="nav-link" href="#about-section">About Dublin</a>
+                    <a class="nav-link" href="#about">About Dublin</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
                     <a class="nav-link" href="#map1">Map</a>
@@ -77,12 +77,10 @@
         <div class="container">
             <div class="row mt-4 mb-4">
                 <div id="city" class="col-sm-6">
-                    <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center
-                        Attractions</button>
+                    <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center Attractions</button>
                 </div>
                 <div id="outdoor" class="col-sm-6">
-                    <button id="outdoors" type="button" class="btn btn-primary btn-lg btn-block">The Great
-                        Outdoors</button>
+                    <button id="outdoors" type="button" class="btn btn-primary btn-lg btn-block">Outdoor Activies</button>
                 </div>
             </div>
             <div id="map"></div>
@@ -93,8 +91,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <h2 class="heading resize-font"><span class="content-border-style"><i
-                                class="fas fa-info-circle"></i>City Center Attractions</span></h2>
+                    <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>City Center Attractions</span></h2>
                 </div>
             </div>
         </div>
@@ -170,7 +167,7 @@
             </div>
         </div>
         <!--outdoor heading-->
-        <section id="activites">
+        <section id="activities">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 ">
@@ -240,18 +237,20 @@
         </section>
         <!--Contact form-->
         <section id="contact">
-            <div class="contact mt-4">
-                <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
-                <p>Let us know if you have any questions about Dublin!</p>
-            </div>
-            <div class="form-container">
-                <form>
-                    <input name="name" type="text" class="form-input" placeholder="Name" />
-                    <input name="email" type="text" class="form-input" placeholder="Email" />
-                    <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
-                    <input id="contact-button" type="submit" value="Submit" />
-                </form>
-            </div>
+            <div class="container">
+                <div class="contact mt-4">
+                    <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
+                    <p>Let us know if you have any questions about Dublin!</p>
+                </div>
+                <div class="form-container">
+                    <form>
+                        <input name="name" type="text" class="form-input" placeholder="Name" />
+                        <input name="email" type="text" class="form-input" placeholder="Email" />
+                        <textarea name="text" class="form-input" placeholder="Enter your message here.."></textarea>
+                        <input id="contact-button" type="submit" value="Submit" />
+                    </form>
+                </div>
+             </div>
         </section>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
