added media query for nav bar font size so content doesn't stack on top of each other

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#map1">Map</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
-                    <a class="nav-link" href="#section-attractions">City Center Attractions</a>
+                    <a class="nav-link" href="#attractions-section">City Center Attractions</a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse">
                     <a class="nav-link" href="#restaurants">Restaurants | Iconic Pubs</a>
@@ -87,7 +87,7 @@
         </div>
     </section>
     <!--city center attraction heading-->
-    <section id="section-attractions">
+    <section id="attractions-section">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 ">
