updated readme.md with links

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/brewery.jpg" alt="Guinness Storehouse">
+                        <img class="d-block w-100" src="assets/images/guinness-compressed.jpg" alt="Guinness Storehouse">
                         <div class="carousel-caption d-none d-md-block text-white bg-info">
                             <h5>Guinness Storehouse</h5>
                             <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin,
