added user id and script tags for emails js before the head element

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +7,12 @@
     <title>Discover Dublin</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript"> 
+        (function(){
+            emailjs.init("user_D3rLRDlbOw6xlZ2B42VNB");
+            })();
+    </script>
 </head>
 
 <body>
@@ -50,8 +55,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>About
-                            Dublin</span></h2>
+                    <h2 class="heading"><span class="content-border-style"><i class="fas fa-info-circle"></i>AboutDublin</span></h2>
                     <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the
                         River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin
                         Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the
