fixed carousel indidicator so arrows move the correct carousel

--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
@@ -244,7 +244,7 @@
     <section id="contact">
         <div class="container">
             <div class="contact mt-4">
-                <h1><span class="content-border-style mx-4">Contact Us!</span></h1>
+                <h2><span class="content-border-style mx-4">Contact Us!</span></h2>
                 <p>Let us know if you have any questions about Dublin!</p>
             </div>
             <div class="form-container">
@@ -256,7 +256,7 @@
                 </form>
             </div>
             </div>
-    </section>
+    </section>git 
 </body>
 <script src="assets/js/sendEmail.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
