changed contact form heading to match other headings in the site

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <section id="contact">
         <div class="container">
             <div class="contact mt-4">
-                <h2><span class="content-border-style mx-4">Contact Us!</span></h2>
+                <h2 class="heading resize-font"><span class="content-border-style mx-4">Contact Us!</span></h2>
                 <p>Let us know if you have any questions about Dublin!</p>
             </div>
             <div class="form-container">
